--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -330,16 +330,17 @@ div.tocify {
 </div>
 <div id="central-questions-of-population-ecology" class="section level2">
 <h2>Central Questions of Population Ecology</h2>
-<p>-Why are some species more abundant than others?<br />
+<p>-Ecological -Why are some species more abundant than others?<br />
 -What causes population densities to vary in space and time?<br />
--What causes populations to become extirpated?<br />
--How do differences in individual traits and behaviors affect population dynamics?<br />
--What processes regulate population dynamics?<br />
--Extrinsic vs intrinsic factors (Nicholson vs Andrewartha debate)<br />
--What are the implications for species conservation? Game management?<br />
--Maximum sustainable yield<br />
--What prevents predator-prey relationships from collapsing?<br />
--What factors allow competitors to coexist?</p>
+-What causes populations to become extirpated? Recolonized?<br />
+-What processes regulate population growth?<br />
+-Extrinsic vs intrinsic factors (Nicholson vs Andrewartha debate) -What prevents predator-prey relationships from collapsing?<br />
+-What factors allow competitors to coexist? -What factors allow metapopulations to be stable?</p>
+<div class="figure">
+<img src="White-tailed_deer.jpg" />
+
+</div>
+<p>-Conservation and Management - What is the conservation status of a focal species or population? - How do anthropogenic structures and land uses affect populations? - What is the <em>Maximum Sustainable Yield</em> for a focal game species? - How can pest species be most effectively controlled? - What land areas are most important for preserving at-risk populations?</p>
 </div>
 <div id="exponential-growth-the-fundamental-principle-of-population-ecology" class="section level2">
 <h2>Exponential growth: the fundamental principle of population ecology</h2>
@@ -391,6 +392,22 @@ div.tocify {
 -How do interspeciﬁc interactions affect species responses to global change?<br />
 -To what extent are widely studied ecological patterns (species-abundance distribution, species-area relationship, etc.) the outcomes of statistical rather than ecological processes?<br />
 -How much does modelling feedbacks from the observation process, such as the responses of organisms to data collectors, improve our ability to infer ecological processes?</p>
+<div class="figure">
+<img src="positivefeedback1.gif" />
+
+</div>
+</div>
+<div id="in-class-exercise-feedbacks" class="section level2">
+<h2>In-class Exercise: Feedbacks</h2>
+<p>Feedbacks occur when the inflows and outflows (e.g., births and deaths) depend upon the value of the stock (e.g., a wildlife population!).</p>
+<p>Feedbacks are what lead to complex (“interesting”) system behaviors.</p>
+<p>A positive feedback (often called a “vicious circle”) leads to exponential growth, leading often to craziness!</p>
+<p>A negative feedback is stabilizing, leading to nice regulated systems (and homeostasis in organismal biology!).</p>
+<p>In the previous in-class exercise the model structure produced straight line growth as the [Flow] added to the [Stock].</p>
+<ol style="list-style-type: decimal">
+<li>What do the following have in common: snowball, people, rabbits, fire, bacteria, fleas, savings accounts, cancer?</li>
+</ol>
+<p>Let’s model this to better understand this process.</p>
 </div>
 
 
