--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@ div.tocify {
 <strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a></p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
-<p><strong>Lecture &amp; Discussion</strong>: T, Th at 9:30am (50 mins) (NOTE: please bring your laptop to class!) <strong>Lab</strong>: F at 11am (3 hours)<br />
+<p><strong>Lecture &amp; Discussion</strong>: T, Th at 9:30am (50 mins) (NOTE: please bring your laptop to class!)<br />
+<strong>Lab</strong>: F at 11am (3 hours)<br />
 <strong>Office hours</strong> Tues from 1 to 3pm</p>
 <ul>
 <li>Lectures will be held in <strong>OB 203</strong><br />
@@ -360,7 +361,7 @@ div.tocify {
 </li>
 <li><a href="http://warnercnr.colostate.edu/~gwhite/mark/mark.htm">Program MARK</a><br />
 </li>
-<li>MS Excel</li>
+<li>MS Excel (hopefully you already have this or equivalent spreadsheet software on your computer!)</li>
 </ul>
 </div>
 <div id="prerequisites" class="section level3">
@@ -394,7 +395,7 @@ div.tocify {
 <div id="grading" class="section level3">
 <h3>Grading:</h3>
 <p>The course grade will be based on the following components:</p>
-<p>Lab projects (8 projects total) 25% (80 pts)<br />
+<p>Lab exercises (8 total) 25% (80 pts)<br />
 Final group project 25% (80 pts)<br />
 Midterm exam # 1 (date TBD) 12.5% (40 pts)<br />
 Midterm exam # 2 (date TBD) 12.5% (40 pts)<br />
@@ -414,13 +415,9 @@ Final exam (date TBD) 25% (80 pts)<br />
 <h3>Labs</h3>
 <p>Lab exercises will focus on applying concepts and methods introduced in lectures, and will involve real data and problems in wildlife conservation and management wherever possible. Graded lab assignments will involve figures, tables, InsightMaker models and R code (when applicable) and responses to questions in short-answer format. Laboratory write-ups will be due the following lab period, unless otherwise specified.</p>
 </div>
-<div id="field-trips" class="section level3">
-<h3>Field Trips</h3>
-<p>We will be taking 1-2 field trips to collect wildlife population data. One field trip will be full-day, on a weekend: bring breakfast, lunch, and plenty of water. Bring any appropriate gear for spending the day in the field including: binoculars, spotting scopes, and field guides, and wear appropriate clothing for hiking. Be prepared for inclement weather.</p>
-</div>
-<div id="group-project" class="section level3">
-<h3>Group project</h3>
-<p>Students will work in groups of ~3-4 people and together address a problem in applied population ecology using real-world data (e.g., collected by a UNR ecology lab). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.</p>
+<div id="final-group-project" class="section level3">
+<h3>Final group project</h3>
+<p>Students will work in groups of ~3-4 people to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.</p>
 </div>
 <div id="graduate-credit-for-those-enrolled-in-nres670" class="section level3">
 <h3>Graduate credit (for those enrolled in NRES670)</h3>
@@ -436,7 +433,7 @@ Final exam (date TBD) 25% (80 pts)<br />
 </div>
 <div id="statement-on-academic-dishonesty" class="section level3">
 <h3>Statement on Academic Dishonesty</h3>
-<p>Cheating, plagiarism or otherwise obtaining grades under false pretenses constitute academic dishonesty according to the code of this university. Plagiarism is using the ideas or words of another person without giving credit to the original source; this includes copying another student in class. Always cite the source of your information. This includes copying or paraphrasing from a book, journal, or unpublished material without giving credit to the author(s), and submitting a term paper that was used in another course. Students who plagiarize will receive a final course grade of F and will be subject to University level disciplinary action.</p>
+<p>Cheating, plagiarism or otherwise obtaining grades under false pretenses constitute academic dishonesty according to the code of this university. Plagiarism is using the ideas or words of another person without giving credit to the original source; this includes copying another student in class. Always cite the source of your information. This includes copying or paraphrasing from a book, journal, or unpublished material without giving credit to the author(s), and submitting a term paper that was used in another course. Academic dishonesty will not be tolerated and penalties can include filing a final grade of “F”; reducing the student’s final course grade one or two full grade points; awarding a failing mark on the coursework in question; or requiring the student to retake or resubmit the coursework. For more details, see the <a href="http://catalog.unr.edu/">University of Nevada, Reno General Catalog</a>.</p>
 </div>
 <div id="statement-on-audio-and-video-recording" class="section level3">
 <h3>Statement on Audio and Video Recording</h3>
@@ -445,6 +442,10 @@ Final exam (date TBD) 25% (80 pts)<br />
 <div id="statement-for-academic-success-services" class="section level3">
 <h3>Statement for Academic Success Services</h3>
 <p>Your student fees cover usage of the University Math Center [(775) 784-4433], University Tutoring Center [(775) 784-6801], and [University Writing Center (775) 784-6030]. These centers support your classroom learning; it is your responsibility to take advantage of their services.</p>
+</div>
+<div id="this-is-a-safe-space" class="section level3">
+<h3>This is a safe space</h3>
+<p>The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity &amp; Title IX Office at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit: <a href="http://www.unr.edu/equal-opportunity-title-ix" class="uri">http://www.unr.edu/equal-opportunity-title-ix</a> .”</p>
 </div>
 <div id="class-protocol" class="section level3">
 <h3>Class protocol</h3>
