--- a/schedule.html
+++ b/schedule.html
@@ -241,271 +241,271 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Week 1</td>
-<td align="left">1/24/17</td>
-<td align="left">LECTURE 1: Course overview, and review: exponential growth, density dependent population regulation</td>
-<td align="left">Gotelli Chapters 1,2</td>
+<td align="left">1/24/2017</td>
+<td align="left">LECTURE 1: Course overview; Intro to Systems Thinking</td>
+<td align="left">Gotelli Chapter 1</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1/26/17</td>
-<td align="left">LECTURE 2: A taxonomy of models in ecology (e.g., individual-based models vs population models)</td>
-<td align="left"></td>
+<td align="left">1/26/2017</td>
+<td align="left">LECTURE 2: Intro to Population Ecology; Exponential growth;</td>
+<td align="left">BCTD Chapter 1</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1/27/17</td>
-<td align="left">LAB: Introduction to simulation modeling in Excel, InsightMaker, and R</td>
+<td align="left">1/27/2017</td>
+<td align="left">LAB: Introduction to population modeling in Excel, InsightMaker, and R</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 2</td>
-<td align="left">1/31/17</td>
-<td align="left">LECTURE 1: Life tables. Age/stage structured population models.</td>
-<td align="left">Gotelli Chapter 3</td>
+<td align="left">1/31/2017</td>
+<td align="left">LECTURE 1: Density-dependent growth;</td>
+<td align="left">Gotelli Chapter 2</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/2/17</td>
-<td align="left">LECTURE 2: Stochastic processes- environmental and demographic stochasticity</td>
-<td align="left"></td>
+<td align="left">2/2/2017</td>
+<td align="left">LECTURE 2: Age-structured populations</td>
+<td align="left">BCTD Chapter 2 (skim)</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/3/17</td>
-<td align="left">LAB: Life tables (in Excel)</td>
+<td align="left">2/3/2017</td>
+<td align="left">LAB: More advanced population modeling with InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 3</td>
-<td align="left">2/7/17</td>
-<td align="left">LECTURE 1: Parameter estimation for population ecology: census data</td>
+<td align="left">2/7/2017</td>
+<td align="left">LECTURE 1: Parameter estimation</td>
 <td align="left">Amstrup et al. Chap. 1</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/9/17</td>
+<td align="left">2/9/2017</td>
 <td align="left">LECTURE 2: Data needs for population ecology: capture-recapture</td>
 <td align="left">Cooch and White Chaps 1,2</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/10/17</td>
+<td align="left">2/10/2017</td>
 <td align="left">LAB: Estimate survival with open-population capture-recapture (program MARK)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 4</td>
-<td align="left">2/14/17</td>
+<td align="left">2/14/2017</td>
 <td align="left">LECTURE 1: Capture-recapture analysis (continued)</td>
 <td align="left">Cooch and White Chaps 3,4</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/16/17</td>
+<td align="left">2/16/2017</td>
 <td align="left">LECTURE 2: Population Viability Analysis</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/17/17</td>
+<td align="left">2/17/2017</td>
 <td align="left">LAB: Estimate survival with open-population capture-recapture (program MARK) (continued)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 5</td>
-<td align="left">2/21/17</td>
+<td align="left">2/21/2017</td>
 <td align="left">LECTURE 1: Population Viability Analysis (continued)</td>
 <td align="left">Brook et al. 2006</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/23/17</td>
+<td align="left">2/23/2017</td>
 <td align="left">LECTURE 2: MIDTERM #1</td>
 <td align="left">Beissinger and Westphal 1998</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/24/17</td>
-<td align="left">LAB: PVA: Construct density-regulated, stochastic population model in R</td>
+<td align="left">2/24/2017</td>
+<td align="left">LAB: PVA: Construct density-regulated, stochastic population model in InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 6</td>
-<td align="left">2/28/17</td>
+<td align="left">2/28/2017</td>
 <td align="left">LECTURE 1: Detecting density dependence in natural populations</td>
 <td align="left">Regan et al 2002</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/2/17</td>
+<td align="left">3/2/2017</td>
 <td align="left">LECTURE 2: Assessing model performance and handling model uncertainty (e.g., sensitivity analysis, cross-validation)</td>
 <td align="left">Akçakaya et al 2005</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/3/17</td>
+<td align="left">3/3/2017</td>
 <td align="left">LAB: PVA lab (continued): scenario testing, sensitivity analysis</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 7</td>
-<td align="left">3/7/17</td>
+<td align="left">3/7/2017</td>
 <td align="left">LECTURE 1: Mitigating threats to populations: “declining population paradigm”</td>
 <td align="left">Gotelli Chapter 4</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/9/17</td>
+<td align="left">3/9/2017</td>
 <td align="left">LECTURE 2: Metapopulations</td>
 <td align="left">Caughley 1988</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/10/17</td>
-<td align="left">LAB: Metapopulation modeling in R</td>
+<td align="left">3/10/2017</td>
+<td align="left">LAB: Metapopulation modeling in InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 8</td>
-<td align="left">3/14/17</td>
+<td align="left">3/14/2017</td>
 <td align="left">LECTURE 1: Data needs for population ecology: Presence-absence data, presence-only data.</td>
 <td align="left">Mackenzie 2005</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/16/17</td>
+<td align="left">3/16/2017</td>
 <td align="left">LECTURE 2: Site-occupancy models</td>
 <td align="left">Knapp et al. 2003</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/17/17</td>
-<td align="left">LAB: Metapopulation modeling in R (continued)</td>
+<td align="left">3/17/2017</td>
+<td align="left">LAB: Metapopulation modeling in InsightMaker (continued)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 9</td>
-<td align="left">3/21/17</td>
+<td align="left">3/21/2017</td>
 <td align="left">LECTURE 1: Modeling habitat suitability: species distribution models</td>
 <td align="left">Elith and Leathwick. 2009</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/23/17</td>
+<td align="left">3/23/2017</td>
 <td align="left">LECTURE 2: Modeling habitat: defining patches and populations</td>
 <td align="left">Larson et al. 2004</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/24/17</td>
+<td align="left">3/24/2017</td>
 <td align="left">LAB: Species Distribution Modeling in R. Defining habitat.</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 10</td>
-<td align="left">3/28/17</td>
+<td align="left">3/28/2017</td>
 <td align="left">LECTURE 1: Estimating and modeling dispersal processes</td>
 <td align="left">Frair et al 2008</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/30/17</td>
+<td align="left">3/30/2017</td>
 <td align="left">LECTURE 2: MIDTERM #2</td>
 <td align="left">Trakhtenbrot et al. 2005</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/31/17</td>
+<td align="left">3/31/2017</td>
 <td align="left">LAB: Species Distribution Modeling in R. Defining habitat (continued). Cross-validation</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 11</td>
-<td align="left">4/4/17</td>
+<td align="left">4/4/2017</td>
 <td align="left">LECTURE 1: Estimating and modeling dispersal processes (continued)</td>
 <td align="left">Stearns 1992 Chapters 1,2</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/6/17</td>
+<td align="left">4/6/2017</td>
 <td align="left">LECTURE 2: The evolutionary context: life-history theory.</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/7/17</td>
+<td align="left">4/7/2017</td>
 <td align="left">LAB: Group projects- getting started</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 12</td>
-<td align="left">4/11/17</td>
+<td align="left">4/11/2017</td>
 <td align="left">LECTURE 1: Species interactions: prey-predator models, competition models,</td>
 <td align="left">Gotelli Chapters 5,6</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/13/17</td>
+<td align="left">4/13/2017</td>
 <td align="left">LECTURE 2: Commensalism, mutualism, Parasite-host and disease-host interactions</td>
 <td align="left">Nichols et al. (2010)</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/14/17</td>
-<td align="left">LAB: Modeling disease spread impacts on spatially explicit populations: individual-based models</td>
+<td align="left">4/14/2017</td>
+<td align="left">LAB: Modeling disease spread impacts on spatially explicit populations:agent-based models</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 13</td>
-<td align="left">4/18/17</td>
+<td align="left">4/18/2017</td>
 <td align="left">LECTURE 1: Modeling disease spread in wildlife populations</td>
 <td align="left">Shoemaker et al. 2014</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/20/17</td>
+<td align="left">4/20/2017</td>
 <td align="left">LECTURE 2: Invasive species, reintroductions, assisted colonization</td>
 <td align="left">Hoegh-Goldberg et al 2008</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/21/17</td>
+<td align="left">4/21/2017</td>
 <td align="left">LAB: Group projects</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
-<td align="left">4/25/17</td>
+<td align="left">4/25/2017</td>
 <td align="left">LECTURE 1: Case study: assessing the species-level impact of climate change</td>
 <td align="left">Pearson and Dawson (2003)</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/27/17</td>
+<td align="left">4/27/2017</td>
 <td align="left">LECTURE 2: Case study: assessing the species-level impact of climate change</td>
 <td align="left">Keith et al (2008)</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/28/17</td>
+<td align="left">4/28/2017</td>
 <td align="left">LAB: Group projects</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 15</td>
-<td align="left">5/2/17</td>
+<td align="left">5/2/2017</td>
 <td align="left">LECTURE 1: Student presentations</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">5/4/17</td>
+<td align="left">5/4/2017</td>
 <td align="left">LECTURE 2: Student presentations</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">5/5/17</td>
+<td align="left">5/5/2017</td>
 <td align="left">LAB: Student presentations / review for final</td>
 <td align="left"></td>
 </tr>
